--- a/wiki/BIM_Material.html
+++ b/wiki/BIM_Material.html
@@ -1,13 +1,13 @@
 <link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">BIM Material</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="index.php?title=Special;Translate&amp;group=page-BIM+Material&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="de/BIM_Material.html" class="mw-pt-progress mw-pt-progress--high" title="BIM Material (77% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="de/BIM_Material.html" class="mw-pt-progress mw-pt-progress--complete" title="BIM Material (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><span class="mw-pt-languages-ui mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="en" dir="ltr">English</span></li>
-<li><a href="fr/BIM_Material.html" class="mw-pt-progress mw-pt-progress--med" title="BIM Mat&eacute;riau (17% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="fr/BIM_Material.html" class="mw-pt-progress mw-pt-progress--complete" title="BIM Mat&eacute;riau (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="pl/BIM_Material.html" class="mw-pt-progress mw-pt-progress--complete" title="Materia&#322; BIM (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="pt-br/BIM_Material.html" class="mw-pt-progress mw-pt-progress--low" title="BIM Material/pt-br (8% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="ru/BIM_Material.html" class="mw-pt-progress mw-pt-progress--low" title="BIM &#1052;&#1072;&#1090;&#1077;&#1088;&#1080;&#1072;&#1083; (4% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="File/BIM_Layers.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="BIM_Layers.html" title="BIM Layers">Layers</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="File/Arch_Schedule.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="Arch_Schedule.html" title="Arch Schedule">Schedule</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="File/BIM_Report.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="BIM_Report.html" title="BIM Report">Report</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="BIM_Workbench.html" title="BIM Workbench">BIM</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="File/Workbench_BIM.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
@@ -118,32 +118,32 @@
 <h3><span class="mw-headline" id="Point_of_interaction:_one-way_import">Point of interaction: one-way import</span></h3>
 <p>The two systems do not have a deep or persistent integration. Their interaction is limited to a one-way data import initiated from the BIM system.
 </p>
-<ul><li><b>Mechanism:</b> The BIM/Arch material editor UI is capable of scanning the directories that contain the core system's <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">.FCMat</span> library files. It presents these external materials to the user as available templates in the material task panel, when choosing a preset.</li>
+<ul><li><b>Mechanism:</b> The BIM/Arch material editor UI is capable of scanning the directories that contain the Core system's <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">.FCMat</span> library files. It presents these external materials to the user as available templates in the material task panel, when choosing a preset.</li>
 <li><b>Process:</b> When a user selects an <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">.FCMat</span> material from this list, the BIM system performs the following actions:</li></ul>
 <ol><li>It reads the data from the selected <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">.FCMat</span> file.</li>
 <li>It uses this data to populate the fields for a new, native <code>App::MaterialObjectPython</code>.</li>
 <li>This new object is then created within the active document.</li></ol>
-<p>Once this import process is complete, there is no further link between the newly created Arch/BIM material and the original <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">.FCMat</span> file. It is a one-time copy of the data at that specific moment. Subsequent changes to the source material in the core library will have no effect on the Arch/BIM materials that were created from it.
+<p>Once this import process is complete, there is no further link between the newly created Arch/BIM material and the original <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">.FCMat</span> file. It is a one-time copy of the data at that specific moment. Subsequent changes to the source material in the Core library will have no effect on the Arch/BIM materials that were created from it.
 </p>
 <h3><span class="mw-headline" id="Physical_vs._appearance_properties">Physical vs. appearance properties</span></h3>
-<p>The FreeCAD material systems are designed with a distinction between a material's physical characteristics and its visual appearance. However, these properties differ significantly between the core Material system and the legacy BIM system.
+<p>The FreeCAD material systems are designed with a distinction between a material's physical characteristics and its visual appearance. However, these properties differ significantly between the Core material system and the legacy BIM system.
 </p>
 <h4><span class="mw-headline" id="Core_material_system_2">Core material system</span></h4>
-<p>The core, C++-based system provides an extensible framework for defining a wide range of material properties. It is organized into "Models," which are schemas that group related properties.
+<p>The Core, C++-based system provides an extensible framework for defining a wide range of material properties. It is organized into "Models," which are schemas that group related properties.
 </p>
 <ul><li><b>Physical Properties:</b> These define the engineering characteristics required for simulation and analysis. The system supports numerous models, including: Mechanical (e.g., <code>Density</code>, <code>YoungsModulus</code>, <code>PoissonRatio</code>), Thermal, Electromagnetic.</li>
 <li><b>Appearance Properties:</b> These define the visual look for rendering. Multiple rendering models are supported, defining properties such as: <code>DiffuseColor</code>, <code>SpecularColor</code> <code>Shininess</code>, <code>Transparency</code>, Texture image paths and scaling.</li>
-<li><b>Extensibility:</b> The model-based architecture is designed to be extensible. Add-on workbenches or future FreeCAD versions can introduce new models to support additional physical domains or render engines without altering the core framework.</li></ul>
+<li><b>Extensibility:</b> The model-based architecture is designed to be extensible. Add-on workbenches or future FreeCAD versions can introduce new models to support additional physical domains or render engines without altering the Core framework.</li></ul>
 <h4><span class="mw-headline" id="BIM_material_system_2">BIM material system</span></h4>
 <p>This legacy, Python-based system has a fixed and more limited set of properties, focusing primarily on visual representation and basic metadata for BIM workflows.
 </p>
 <ul><li><b>Physical Properties:</b> This system does not have a formal concept of physical properties for engineering analysis. It does not manage data like density or Young's Modulus.</li>
 <li><b>Appearance Properties:</b> The properties are hard-coded and limited to a basic set necessary for architectural visualization and metadata, consisting of 6 properties: <span style="font-size:60%; padding-right:0.8em;">Data</span><b>Color</b>, <span style="font-size:60%; padding-right:0.8em;">Data</span><b>Section Color</b>, <span style="font-size:60%; padding-right:0.8em;">Data</span><b>Transparency</b> (appearance), <span style="font-size:60%; padding-right:0.8em;">Data</span><b>Description</b>, <span style="font-size:60%; padding-right:0.8em;">Data</span><b>Standard Code</b>, <span style="font-size:60%; padding-right:0.8em;">Data</span><b>Product URL</b> (metadata).</li>
 <li><b>Extensibility:</b> The property set is fixed within the Python code and is not designed to be extended.</li></ul>
-<p>This distinction is critical: the core system is necessary for any engineering analysis (like FEM), while the BIM system is tailored for architectural visualization and IFC compatibility.
+<p>This distinction is critical: the Core system is necessary for any engineering analysis (like FEM), while the BIM system is tailored for architectural visualization and IFC compatibility.
 </p>
 <h3><span class="mw-headline" id="Coexistence_and_interoperability_of_material_systems">Coexistence and interoperability of material systems</span></h3>
-<p>While the long-term goal is full migration of the BIM workbench to the core Materials system, a transition period requires understanding how they can coexist on a single object.
+<p>While the long-term goal is full migration of the BIM workbench to the Core material system, a transition period requires understanding how they can coexist on a single object.
 </p>
 <h4><span id="Can_both_systems_be_assigned_to_one_object.3F"></span><span class="mw-headline" id="Can_both_systems_be_assigned_to_one_object?">Can both systems be assigned to one object?</span></h4>
 <p>It is technically possible to assign a material from both systems to the same object (e.g., an <a href="Arch_Wall.html" title="Arch Wall">Arch Wall</a>). The two systems use different, non-conflicting properties to store their data:
@@ -170,7 +170,7 @@ This workaround introduces a significant risk of <b>data desynchronization</b>. 
 </p>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="File/BIM_Layers.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="BIM_Layers.html" title="BIM Layers">Layers</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="File/Arch_Schedule.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="Arch_Schedule.html" title="Arch Schedule">Schedule</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="File/BIM_Report.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="BIM_Report.html" title="BIM Report">Report</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="BIM_Workbench.html" title="BIM Workbench">BIM</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="File/Workbench_BIM.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
@@ -217,35 +217,35 @@ This workaround introduces a significant risk of <b>data desynchronization</b>. 
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20251024120006
+Cached time: 20260115102815
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.147 seconds
-Real time usage: 0.187 seconds
+Real time usage: 0.157 seconds
 Preprocessor visited node count: 1710/1000000
-Post&#8208;expand include size: 31670/2097152 bytes
-Template argument size: 9750/2097152 bytes
+Post&#8208;expand include size: 31622/2097152 bytes
+Template argument size: 9718/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1307/5000000 bytes
+Unstrip post&#8208;expand size: 1318/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   34.484      1 -total
- 32.08%   11.063     19 Template:PropertyData
- 25.88%    8.925     19 Template:Variable
- 19.62%    6.765      1 Template:BIM_Tools_navi
- 17.90%    6.172      2 Template:Navigation_menu_2
-  7.39%    2.547      1 Template:Userdocnavi
-  5.05%    1.742      2 Template:Docnav
-  4.98%    1.716      1 Template:GuiCommand
-  4.25%    1.465     15 Template:Incode
-  4.07%    1.404      1 Template:Properties_Title
+100.00%   40.671      1 -total
+ 33.17%   13.489     19 Template:PropertyData
+ 26.50%   10.779     19 Template:Variable
+ 23.50%    9.559      1 Template:BIM_Tools_navi
+ 22.46%    9.135      2 Template:Navigation_menu_2
+  8.53%    3.471      1 Template:Userdocnavi
+  4.64%    1.888      1 Template:GuiCommand
+  4.53%    1.841     15 Template:Incode
+  4.50%    1.830      2 Template:Docnav
+  3.76%    1.531      6 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:353283-0!canonical and timestamp 20251024120006 and revision id 1676514. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:353283-0!canonical and timestamp 20260115102817 and revision id 1738640. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
