--- a/wiki/BIM_Report.html
+++ b/wiki/BIM_Report.html
@@ -1,13 +1,13 @@
 <link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">BIM Report</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><p><br>
 </p>
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="File/Arch_Schedule.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="Arch_Schedule.html" title="Arch Schedule">Schedule</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="File/BIM_Preflight.png" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="BIM_Preflight.html" title="BIM Preflight">Preflight</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="File/BIM_Material.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="BIM_Material.html" title="BIM Material">Material</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="File/Arch_Schedule.png" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="Arch_Schedule.html" title="Arch Schedule">Schedule</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="BIM_Workbench.html" title="BIM Workbench">BIM</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="File/Workbench_BIM.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
 </div>
-<div id="itsfree" class="warning-box">THIS COMMAND IS EXPERIMENTAL AND NOT PART OF FREECAD. It is a <b>work in progress PR</b> (<a rel="nofollow" class="external free" href="https://github.com/FreeCAD/FreeCAD/pull/24078">https://github.com/FreeCAD/FreeCAD/pull/24078</a>) that needs to be reviewed and tested. This page is a placeholder to host documentation for testers.</div>
+<div class="warning-box">THIS COMMAND IS EXPERIMENTAL AND NOT PART OF FREECAD. It is a <b>work in progress PR</b> (<a rel="nofollow" class="external free" href="https://github.com/FreeCAD/FreeCAD/pull/24078">https://github.com/FreeCAD/FreeCAD/pull/24078</a>) that needs to be reviewed and tested. This page is a placeholder to host documentation for testers.</div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -540,8 +540,8 @@ This is a classic hierarchical problem that requires multiple steps. The goal is
 <p><br>
 </p>
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="File/Arch_Schedule.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="Arch_Schedule.html" title="Arch Schedule">Schedule</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="File/BIM_Preflight.png" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="BIM_Preflight.html" title="BIM Preflight">Preflight</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="File/BIM_Material.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="BIM_Material.html" title="BIM Material">Material</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="File/Arch_Schedule.png" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="Arch_Schedule.html" title="Arch Schedule">Schedule</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="BIM_Workbench.html" title="BIM Workbench">BIM</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="File/Workbench_BIM.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
@@ -588,15 +588,15 @@ This is a classic hierarchical problem that requires multiple steps. The goal is
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20251105130007
+Cached time: 20260115102945
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.279 seconds
-Real time usage: 3.115 seconds
+CPU time usage: 0.165 seconds
+Real time usage: 0.175 seconds
 Preprocessor visited node count: 1999/1000000
-Post&#8208;expand include size: 42605/2097152 bytes
-Template argument size: 15715/2097152 bytes
+Post&#8208;expand include size: 42574/2097152 bytes
+Template argument size: 15703/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 24/100
 Unstrip recursion depth: 0/20
@@ -604,19 +604,19 @@ Unstrip post&#8208;expand size: 27141/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00% 2844.663      1 -total
- 97.76% 2781.000     23 Template:Code
-  0.44%   12.555      1 Template:BIM_Tools_navi
-  0.38%   10.870      2 Template:Navigation_menu_2
-  0.26%    7.501    114 Template:Incode
-  0.24%    6.703      2 Template:Docnav
-  0.17%    4.845      1 Template:Userdocnavi
-  0.12%    3.499      3 Template:PropertyData
-  0.11%    3.144      1 Template:GuiCommand
-  0.11%    3.018      1 Template:TitleProperty
+100.00%   39.855      1 -total
+ 15.95%    6.359     23 Template:Code
+ 14.63%    5.832      1 Template:BIM_Tools_navi
+ 13.30%    5.300      2 Template:Navigation_menu_2
+ 11.78%    4.696    114 Template:Incode
+  6.96%    2.772      3 Template:PropertyData
+  5.54%    2.210      1 Template:TitleProperty
+  5.01%    1.995      1 Template:Userdocnavi
+  4.32%    1.722      3 Template:Variable
+  4.02%    1.601      8 Template:CheckBox
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:393208-0!canonical and timestamp 20251105130007 and revision id 1681340. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:393208-0!canonical and timestamp 20260115102949 and revision id 1738641. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
