--- a/wiki/Arch_Schedule.html
+++ b/wiki/Arch_Schedule.html
@@ -1,14 +1,14 @@
 <link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Arch Schedule</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="index.php?title=Special;Translate&amp;group=page-Arch+Schedule&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="de/Arch_Schedule.html" class="mw-pt-progress mw-pt-progress--high" title="Arch Liste (95% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="de/Arch_Schedule.html" class="mw-pt-progress mw-pt-progress--complete" title="Arch Liste (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><span class="mw-pt-languages-ui mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="en" dir="ltr">English</span></li>
-<li><a href="fr/Arch_Schedule.html" class="mw-pt-progress mw-pt-progress--high" title="Arch Nomenclature (95% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="fr/Arch_Schedule.html" class="mw-pt-progress mw-pt-progress--complete" title="Arch Nomenclature (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="it/Arch_Schedule.html" class="mw-pt-progress mw-pt-progress--med" title="Arch: Scheda (32% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="pl/Arch_Schedule.html" class="mw-pt-progress mw-pt-progress--complete" title="Architektura: Obmiar (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="pt-br/Arch_Schedule.html" class="mw-pt-progress mw-pt-progress--low" title="Cronograma (14% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="ro/Arch_Schedule.html" class="mw-pt-progress mw-pt-progress--low" title="Arch: Schedule (14% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
 <li><a href="ru/Arch_Schedule.html" class="mw-pt-progress mw-pt-progress--med" title="Arch &#1055;&#1083;&#1072;&#1085;&#1080;&#1088;&#1086;&#1074;&#1072;&#1085;&#1080;&#1077; (27% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="File/BIM_Material.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="BIM_Material.html" title="BIM Material">Materials</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="File/BIM_Report.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="BIM_Report.html" title="BIM Report">Report</a></div>
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="File/BIM_Preflight.png" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="BIM_Preflight.html" title="BIM Preflight">Preflight</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="BIM_Workbench.html" title="BIM Workbench">BIM</a>
@@ -128,7 +128,7 @@
 </p><p><br>
 </p>
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="File/BIM_Material.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="BIM_Material.html" title="BIM Material">Materials</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="File/BIM_Report.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="BIM_Report.html" title="BIM Report">Report</a></div>
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="File/BIM_Preflight.png" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="BIM_Preflight.html" title="BIM Preflight">Preflight</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="BIM_Workbench.html" title="BIM Workbench">BIM</a>
@@ -176,35 +176,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20251014080245
+Cached time: 20260115103034
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.146 seconds
-Real time usage: 0.201 seconds
+CPU time usage: 0.122 seconds
+Real time usage: 0.133 seconds
 Preprocessor visited node count: 1203/1000000
-Post&#8208;expand include size: 28325/2097152 bytes
-Template argument size: 9594/2097152 bytes
+Post&#8208;expand include size: 28283/2097152 bytes
+Template argument size: 9566/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1630/5000000 bytes
+Unstrip post&#8208;expand size: 1640/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   23.142      1 -total
- 27.34%    6.326      1 Template:BIM_Tools_navi
- 25.48%    5.896      2 Template:Navigation_menu_2
- 21.33%    4.936     10 Template:PropertyData
- 15.00%    3.471     10 Template:Variable
- 11.62%    2.689      1 Template:Userdocnavi
-  7.65%    1.771      2 Template:Docnav
-  7.21%    1.667     27 Template:Incode
-  7.08%    1.639      1 Template:GuiCommand
-  4.45%    1.029      9 Template:Button
+100.00%   22.284      1 -total
+ 26.61%    5.929     10 Template:PropertyData
+ 24.25%    5.403      1 Template:BIM_Tools_navi
+ 22.27%    4.963      2 Template:Navigation_menu_2
+ 17.50%    3.901     10 Template:Variable
+  9.17%    2.043      1 Template:Userdocnavi
+  8.62%    1.921     27 Template:Incode
+  6.65%    1.481      1 Template:GuiCommand
+  6.26%    1.394      2 Template:Docnav
+  4.80%    1.070      9 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:59501-0!canonical and timestamp 20251014080245 and revision id 1662111. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:59501-0!canonical and timestamp 20260115103036 and revision id 1738642. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
