GuiCommand and Usage.

--- a/wiki/BIM_Report.html
+++ b/wiki/BIM_Report.html
@@ -18,7 +18,7 @@
 <th class="ctOdd">Menu location
 </th></tr>
 <tr>
-<td class="ctEven">Manage &rarr; Report
+<td class="ctEven">Manage &rarr; Report Tools &rarr; BIM Report
 </td></tr>
 <tr>
 <th class="ctOdd">Workbenches
@@ -36,7 +36,7 @@
 <th class="ctOdd">Introduced in version
 </th></tr>
 <tr>
-<td class="ctEven">-
+<td class="ctEven">1.2
 </td></tr>
 <tr>
 <th class="ctOdd">See also
@@ -56,7 +56,9 @@
 <li><b>Hierarchical queries:</b> Select objects based on their relationship to other objects (e.g., find all windows hosted in walls on a specific floor).</li></ul>
 <h2><span class="mw-headline" id="Usage">Usage</span></h2>
 <ol><li>Open or create a FreeCAD document which contains some objects.</li>
-<li>Press the <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="index.php?title=BIM_Report.svg&amp;filetimestamp=20251007070453&amp;.html" class="mw-file-description"><img src="File/BIM_Report.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Report</a></span> button.</li>
+<li>There are several ways to invoke the tool:
+<ul><li>Press the <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="index.php?title=BIM_Report.svg&amp;filetimestamp=20251007070453&amp;.html" class="mw-file-description"><img src="File/BIM_Report.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">BIM Report</a></span> button.</li>
+<li>Select the <b>Manage &rarr; Report Tools &rarr; <span typeof="mw:File"><a href="index.php?title=BIM_Report.svg&amp;filetimestamp=20251007070453&amp;.html" class="mw-file-description"><img src="File/BIM_Report.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> BIM Report</b> option from the menu.</li></ul></li>
 <li>The new Report will open its Task Panel automatically. Create one or more statements for the report. You can optionally use the provided statement editor to see a preview of executing those statements.</li>
 <li>Press <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span> to save the report and refresh the associated spreadsheet with the query results.</li></ol>
 <h3><span class="mw-headline" id="User_interface">User interface</span></h3>
@@ -588,15 +590,15 @@ This is a classic hierarchical problem that requires multiple steps. The goal is
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115102945
+Cached time: 20260115103645
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.165 seconds
-Real time usage: 0.175 seconds
-Preprocessor visited node count: 1999/1000000
-Post&#8208;expand include size: 42574/2097152 bytes
-Template argument size: 15703/2097152 bytes
+CPU time usage: 0.184 seconds
+Real time usage: 0.231 seconds
+Preprocessor visited node count: 2008/1000000
+Post&#8208;expand include size: 42698/2097152 bytes
+Template argument size: 15823/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 24/100
 Unstrip recursion depth: 0/20
@@ -604,19 +606,19 @@ Unstrip post&#8208;expand size: 27141/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   39.855      1 -total
- 15.95%    6.359     23 Template:Code
- 14.63%    5.832      1 Template:BIM_Tools_navi
- 13.30%    5.300      2 Template:Navigation_menu_2
- 11.78%    4.696    114 Template:Incode
-  6.96%    2.772      3 Template:PropertyData
-  5.54%    2.210      1 Template:TitleProperty
-  5.01%    1.995      1 Template:Userdocnavi
-  4.32%    1.722      3 Template:Variable
-  4.02%    1.601      8 Template:CheckBox
+100.00%   51.600      1 -total
+ 14.31%    7.386      1 Template:BIM_Tools_navi
+ 13.62%    7.028     23 Template:Code
+ 11.18%    5.767      2 Template:Navigation_menu_2
+  9.74%    5.027    114 Template:Incode
+  8.58%    4.425      3 Template:PropertyData
+  6.72%    3.468      1 Template:TitleProperty
+  6.35%    3.277      2 Template:Docnav
+  5.14%    2.652      3 Template:Variable
+  4.65%    2.398      1 Template:GuiCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:393208-0!canonical and timestamp 20260115102949 and revision id 1738641. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:393208-0!canonical and timestamp 20260115103644 and revision id 1738643. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
