--- a/wiki/BIM_Material.html
+++ b/wiki/BIM_Material.html
@@ -1,8 +1,8 @@
 <link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">BIM Material</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="index.php?title=Special;Translate&amp;group=page-BIM+Material&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="de/BIM_Material.html" class="mw-pt-progress mw-pt-progress--complete" title="BIM Material (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="de/BIM_Material.html" class="mw-pt-progress mw-pt-progress--high" title="BIM Material (96% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><span class="mw-pt-languages-ui mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="en" dir="ltr">English</span></li>
-<li><a href="fr/BIM_Material.html" class="mw-pt-progress mw-pt-progress--complete" title="BIM Mat&eacute;riau (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><a href="pl/BIM_Material.html" class="mw-pt-progress mw-pt-progress--complete" title="Materia&#322; BIM (100% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="fr/BIM_Material.html" class="mw-pt-progress mw-pt-progress--high" title="BIM Mat&eacute;riau (96% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="pl/BIM_Material.html" class="mw-pt-progress mw-pt-progress--high" title="Materia&#322; BIM (96% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="pt-br/BIM_Material.html" class="mw-pt-progress mw-pt-progress--low" title="BIM Material/pt-br (8% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="ru/BIM_Material.html" class="mw-pt-progress mw-pt-progress--low" title="BIM &#1052;&#1072;&#1090;&#1077;&#1088;&#1080;&#1072;&#1083; (4% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
 <div class="docnav">
@@ -217,35 +217,35 @@ This workaround introduces a significant risk of <b>data desynchronization</b>. 
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115102815
+Cached time: 20260115104016
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.147 seconds
-Real time usage: 0.157 seconds
+Real time usage: 0.186 seconds
 Preprocessor visited node count: 1710/1000000
 Post&#8208;expand include size: 31622/2097152 bytes
 Template argument size: 9718/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1318/5000000 bytes
+Unstrip post&#8208;expand size: 1303/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   40.671      1 -total
- 33.17%   13.489     19 Template:PropertyData
- 26.50%   10.779     19 Template:Variable
- 23.50%    9.559      1 Template:BIM_Tools_navi
- 22.46%    9.135      2 Template:Navigation_menu_2
-  8.53%    3.471      1 Template:Userdocnavi
-  4.64%    1.888      1 Template:GuiCommand
-  4.53%    1.841     15 Template:Incode
-  4.50%    1.830      2 Template:Docnav
-  3.76%    1.531      6 Template:FileName
+100.00%   47.942      1 -total
+ 25.60%   12.275     19 Template:PropertyData
+ 20.19%    9.680     19 Template:Variable
+ 18.59%    8.912      1 Template:MenuCommand
+ 15.06%    7.220      1 Template:BIM_Tools_navi
+ 12.67%    6.076      2 Template:Navigation_menu_2
+  8.13%    3.900      1 Template:Userdocnavi
+  6.34%    3.040      2 Template:Docnav
+  6.04%    2.897      1 Template:GuiCommand
+  4.66%    2.232     15 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:353283-0!canonical and timestamp 20260115102817 and revision id 1738640. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:353283-0!canonical and timestamp 20260115104016 and revision id 1738640. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="site.js"></script>
