--- a/wiki/BIM_Workbench.html
+++ b/wiki/BIM_Workbench.html
@@ -1,11 +1,11 @@
 <link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">BIM Workbench</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="index.php?title=Special;Translate&amp;group=page-BIM+Workbench&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="de/BIM_Workbench.html" class="mw-pt-progress mw-pt-progress--complete" title="Arbeitsbereich BIM (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="de/BIM_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="Arbeitsbereich BIM (99% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><span class="mw-pt-languages-ui mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="en" dir="ltr">English</span></li>
-<li><a href="es/BIM_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="Ambiente de trabajo BIM (94% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
-<li><a href="fr/BIM_Workbench.html" class="mw-pt-progress mw-pt-progress--complete" title="Atelier BIM (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="es/BIM_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="Ambiente de trabajo BIM (93% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
+<li><a href="fr/BIM_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="Atelier BIM (99% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="hr/BIM_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="BIM radni stol (1% translated)" lang="hr" dir="ltr">hrvatski</a></li>
-<li><a href="it/BIM_Workbench.html" class="mw-pt-progress mw-pt-progress--med" title="Ambiente BIM (69% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="pl/BIM_Workbench.html" class="mw-pt-progress mw-pt-progress--complete" title="&#346;rodowisko pracy BIM (100% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="it/BIM_Workbench.html" class="mw-pt-progress mw-pt-progress--med" title="Ambiente BIM (68% translated)" lang="it" dir="ltr">italiano</a></li>
+<li><a href="pl/BIM_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="&#346;rodowisko pracy BIM (99% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="pt-br/BIM_Workbench.html" class="mw-pt-progress mw-pt-progress--med" title="Bancada de trabalho BIM (17% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="ru/BIM_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="&#1042;&#1077;&#1088;&#1089;&#1090;&#1072;&#1082; BIM (4% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="ja/BIM_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="BIM&#12527;&#12540;&#12463;&#12505;&#12531;&#12481; (2% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
@@ -333,34 +333,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115102606
+Cached time: 20260115103931
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.362 seconds
-Real time usage: 0.412 seconds
-Preprocessor visited node count: 1337/1000000
+CPU time usage: 0.448 seconds
+Real time usage: 0.761 seconds
+Preprocessor visited node count: 1339/1000000
 Post&#8208;expand include size: 22000/2097152 bytes
 Template argument size: 8600/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2118/5000000 bytes
+Unstrip post&#8208;expand size: 2103/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   17.211      1 -total
- 41.04%    7.063      1 Template:BIM_Tools_navi
- 38.45%    6.618      2 Template:Navigation_menu_2
- 15.58%    2.682      1 Template:Userdocnavi
- 12.41%    2.136      2 Template:Docnav
-  7.59%    1.306      7 Template:VersionPlus
-  5.70%    0.981      1 Template:TOCright
-  5.44%    0.937      1 Template:Version
-  5.16%    0.888      1 Template:MenuCommand
+100.00%   28.204      1 -total
+ 38.66%   10.903      1 Template:BIM_Tools_navi
+ 33.46%    9.436      2 Template:Navigation_menu_2
+ 14.71%    4.150      1 Template:Userdocnavi
+ 10.97%    3.093      1 Template:Version
+  9.96%    2.810      1 Template:MenuCommand
+  8.01%    2.259      2 Template:Docnav
+  6.65%    1.876      7 Template:VersionPlus
+  6.37%    1.797      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:104018-0!canonical and timestamp 20260115102608 and revision id 1738639. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:104018-0!canonical and timestamp 20260115103931 and revision id 1738661. Rendering was triggered because: unknown
  -->
 </div>
 </div><script src="site.js"></script>
