--- a/wiki/bg/BIM_ReportTools.html
+++ b/wiki/bg/BIM_ReportTools.html
@@ -1,7 +1,7 @@
-<link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">BIM ReportTools/bg</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="redirectMsg"><p>Redirect to:</p><ul class="redirectText"><li><a href="../index.php?title=BIM_Workbench/bg&amp;action=edit&amp;redlink=1.html" class="new" title="BIM Workbench/bg (page does not exist)">BIM Workbench/bg#BIM ReportTools</a></li></ul></div>
+<link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">BIM ReportTools/bg</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="redirectMsg"><p>Redirect to:</p><ul class="redirectText"><li><a href="../BIM_Workbench.html#BIM_ReportTools" title="BIM Workbench">BIM Workbench#BIM ReportTools</a></li></ul></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115105231
+Cached time: 20260115105246
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
@@ -20,7 +20,7 @@ Transclusion expansion time report (%,ms,calls,template)
 100.00%    0.000      1 -total
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411256-0!canonical and timestamp 20260115105231 and revision id 1738677. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411256-0!canonical and timestamp 20260115105246 and revision id 1738678. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
