--- a/wiki/zh/BIM_ReportTools.html
+++ b/wiki/zh/BIM_ReportTools.html
@@ -1,12 +1,12 @@
-<link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">BIM ReportTools/zh</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="redirectMsg"><p>Redirect to:</p><ul class="redirectText"><li><a href="../index.php?title=BIM_Workbench/zh&amp;action=edit&amp;redlink=1.html" class="new" title="BIM Workbench/zh (page does not exist)">BIM Workbench/zh#BIM ReportTools</a></li></ul></div>
+<link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">BIM ReportTools/zh</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="redirectMsg"><p>Redirect to:</p><ul class="redirectText"><li><a href="../BIM_Workbench.html#BIM_ReportTools" title="BIM Workbench">BIM Workbench#BIM ReportTools</a></li></ul></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115105952
+Cached time: 20260115110006
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.003 seconds
-Real time usage: 0.003 seconds
+CPU time usage: 0.002 seconds
+Real time usage: 0.002 seconds
 Preprocessor visited node count: 0/1000000
 Post&#8208;expand include size: 0/2097152 bytes
 Template argument size: 0/2097152 bytes
@@ -20,7 +20,7 @@ Transclusion expansion time report (%,ms,calls,template)
 100.00%    0.000      1 -total
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411276-0!canonical and timestamp 20260115105952 and revision id 1738699. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411276-0!canonical and timestamp 20260115110006 and revision id 1738700. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
