--- a/wiki/pl/BIM_Workbench.html
+++ b/wiki/pl/BIM_Workbench.html
@@ -191,9 +191,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=BIM_Classification.svg&amp;filetimestamp=20240608121117&amp;.html" class="mw-file-description"><img src="../File/BIM_Classification.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../pl/BIM_Classification.html" title="BIM Classification/pl">Zarz&#261;dzaj klasyfikacj&#261; ...</a>: Zarz&#261;dzaj sposobem, w jaki obiekty i materia&#322;y projektu odnosz&#261; si&#281; do system&oacute;w klasyfikacji, takich jak <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Uniclass">Uniclass</a>.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=BIM_Layers.svg&amp;filetimestamp=20240608121601&amp;.html" class="mw-file-description"><img src="../File/BIM_Layers.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../pl/BIM_Layers.html" title="BIM Layers/pl">Zarz&#261;dzaj warstwami ...</a>: Zarz&#261;dzanie warstwami dokumentu.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=BIM_Material.svg&amp;filetimestamp=20240608121647&amp;.html" class="mw-file-description"><img src="../File/BIM_Material.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../pl/BIM_Material.html" title="BIM Material/pl">Materia&#322;</a>: Zarz&#261;dza <a href="../pl/Arch_SetMaterial.html" title="Arch SetMaterial/pl">materia&#322;ami</a> lub <a href="../pl/Arch_MultiMaterial.html" title="Arch MultiMaterial/pl">materia&#322;ami wielowarstwowymi</a> wybranych obiekt&oacute;w.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span id="BIM_ReportTools">Report Tools:</span></li></ul>
-</div>
+<ul><li><span id="BIM_ReportTools">Narz&#281;dzia do raportowania:</span></li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=BIM_Report.svg&amp;filetimestamp=20251007070453&amp;.html" class="mw-file-description"><img src="../File/BIM_Report.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../BIM_Report.html" title="BIM Report">BIM Report</a>: Creates a new BIM Report to query model data with SQL. <span style="font-size:small;"><a href="../Release_notes_1.2.html" title="Release notes 1.2">introduced in 1.2</a></span></li></ul></dd></dl>
 </div>
@@ -373,13 +371,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115103816
+Cached time: 20260115110649
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.397 seconds
-Real time usage: 0.467 seconds
-Preprocessor visited node count: 886/1000000
+CPU time usage: 0.393 seconds
+Real time usage: 0.608 seconds
+Preprocessor visited node count: 885/1000000
 Post&#8208;expand include size: 24559/2097152 bytes
 Template argument size: 9566/2097152 bytes
 Highest expansion depth: 5/100
@@ -389,18 +387,18 @@ Unstrip post&#8208;expand size: 2093/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   19.875      1 -total
- 40.11%    7.972      1 Template:BIM_Tools_navi/pl
- 25.07%    4.982      2 Template:Navigation_menu_2
- 14.32%    2.847      2 Template:Docnav/pl
- 13.80%    2.743      7 Template:VersionPlus/pl
-  9.74%    1.936      1 Template:Userdocnavi/pl
-  5.65%    1.123      1 Template:MenuCommand
-  5.53%    1.099      1 Template:Version
-  4.85%    0.963      1 Template:TOCright
+100.00%   28.577      1 -total
+ 39.88%   11.396      1 Template:BIM_Tools_navi/pl
+ 18.56%    5.303      2 Template:Navigation_menu_2
+ 14.41%    4.118      7 Template:VersionPlus/pl
+ 10.53%    3.008      1 Template:Userdocnavi/pl
+  9.90%    2.829      2 Template:Docnav/pl
+  8.70%    2.487      1 Template:MenuCommand
+  6.69%    1.912      1 Template:Version
+  5.15%    1.471      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:201810-0!canonical and timestamp 20260115103816 and revision id 1738665. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:201810-0!canonical and timestamp 20260115110648 and revision id 1738705. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
